# timeline-notes

./: .gitignore  README.md  main.js  package-lock.json  package.json
.github/workflows/: release.yml
docs/: RELEASE.md
docs/superpowers/plans/: 2026-07-05-batch-delete-ui.md
docs/superpowers/specs/: 2026-07-05-batch-delete-ui-design.md  2026-07-05-code-cleanup-design.md  2026-07-07-datetime-picker-design.md  2026-07-07-due-time-reminder-design.md
html-version/: README.md  index.html
html-version/css/: style.css
html-version/js/: datetime-picker.js  timeline.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/js/: app.js  emoji-data.js  store.js
