[package]
name = "timeline-notes"
version = "1.0.0"
description = "时间轴便签 - 带提醒的桌面便签应用"
authors = ["wangkun"]
edition = "2021"

[lib]
name = "timeline_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
